Perf: Generational ZGC, lower view/sim distance, cache du in panel